--- a/survey.css
+++ b/survey.css
@@ -4,6 +4,7 @@ body {
     background-image: url('https://i.pinimg.com/originals/7f/e7/74/7fe774bbacce09f00cb5b2e3cbc48db3.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
+    backgriund-size: auto;
     padding-top: 97.8px;
     font-family: 'Outfit', sans-serif;
 }
