--- a/survey.css
+++ b/survey.css
@@ -7,6 +7,7 @@ body {
     background-size: cover;
     padding-top: 97.8px;
     font-family: 'Outfit', sans-serif;
+    overflow-x: hidden;
 }
 header {
     width: 100%;
