--- a/survey.css
+++ b/survey.css
@@ -2,6 +2,7 @@
 
 body {
     background-image: url('https://i.pinimg.com/originals/7f/e7/74/7fe774bbacce09f00cb5b2e3cbc48db3.png');
+    background-color: #000000;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
